--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -1,6 +1,19 @@
-.header-nav {
-    display: flex;
-    justify-content: space-around;
+.header-nav--list {
+    position: absolute;
     width: 309px;
     height: 34px;
+    top: 17px;
+    left: 931px;
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+}
+
+.header-nav--li{
+    font-family: 'Montserrat';
+    font-weight: 500;
+    color: #FF6060;
+    display: flex;
+    text-align: right;
+    text-decoration : none;
 }
