--- a/src/styles/a_propos/CardApropos.css
+++ b/src/styles/a_propos/CardApropos.css
@@ -88,7 +88,7 @@ background-color: #ffff;
     width: 1240px;
     height: 223px;
     border-radius: 25px;
-    margin: auto;
+    margin:  40px auto;
     margin-bottom: 33px;
 }
 
