--- a/src/styles/a_propos/CardApropos.css
+++ b/src/styles/a_propos/CardApropos.css
@@ -1,6 +1,6 @@
 
 .apropos {
-width: 1023px;
+max-width: 1023px;
 display: flex;
 flex-direction: column;
 margin: 0 auto 33px auto
@@ -85,7 +85,7 @@ background-color: #ffff;
 .montain{
     position: relative;
     background-color: rgba(0,0,0,0.3);
-    width: 1240px;
+    max-width: 1240px;
     height: 223px;
     border-radius: 25px;
     margin:  40px auto;
@@ -93,7 +93,20 @@ background-color: #ffff;
 }
 
 .montain-img{
+    width: 100%;
+    height: 100%;
     border-radius: 25px;
     position: absolute;
     z-index: -1;
+    object-fit:cover;
+    
 }
+
+@media screen and  (max-width: 1239px){
+    .montain{
+        margin: 20px;
+    }
+    .apropos{
+        margin: 20px;
+    }
+    }
