--- a/src/styles/home/Home.css
+++ b/src/styles/home/Home.css
@@ -1,4 +1,10 @@
 .home{
 margin: 40px auto;
-width: 1240px
+max-width: 1240px
 }
+
+@media screen and  (max-width: 1239px){
+    .home{
+        margin: 20px;
+    }
+    }
