--- a/src/styles/layout/Navigation.css
+++ b/src/styles/layout/Navigation.css
@@ -3,7 +3,7 @@
     height: 34px;
     top: 17px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .header-nav--link{
