--- a/src/styles/logement/Infos.css
+++ b/src/styles/logement/Infos.css
@@ -1,6 +1,5 @@
-
-.info{
-    position: relative;
+.info {
+    max-width: 1240px;
     display: flex;
     color: #FF6060;
     font-weight: 500;
@@ -11,24 +10,26 @@
     width: 80%;
 }
 
-.inforight{
+.inforight {
+    position: relative;
     width: 20%;
     display: flex;
     flex-direction: column;
     height: auto;
 }
 
-.info-title{
+.info-title {
     font-size: 36px;
+    margin-bottom: 5px;
 }
 
-.info-plus{
+.info-plus {
     margin-top: 20px;
     display: flex;
     list-style: none;
 }
 
-.info-plus--unique{
+.info-plus--unique {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -36,16 +37,20 @@
     background-color: #ff6060;
     color: white;
     font-size: 14px;
-padding: 0;
-width: 200px;
-height: 25px;
-border-radius: 10px;
+    padding: 0;
+    width: 200px;
+    height: 25px;
+    border-radius: 10px;
+}
+
+.host {
+    width: 100%;
 }
 
 .host-name {
     text-align: right;
     position: absolute;
-    top:10px;
+    top: 10px;
     right: 75px;
     display: flex;
     flex-wrap: wrap;
@@ -54,20 +59,57 @@ border-radius: 10px;
     width: 93px;
 }
 
-.host-picture{
+.host-picture {
     position: absolute;
     width: 64px;
     height: 64px;
-   border-radius: 40px;
-   top:0;
-   right:0;
+    border-radius: 40px;
+    top: 0;
+    right: 0;
 }
 
-.info-stars--list, ul, .info-star {
-    position: relative;
-    margin: 5px;
-    height: 100%;
-    top:25px;
+.info-stars--list,
+ul {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    justify-content: right;
+    height: 32px;
     display: flex;
-list-style: none;
+    list-style: none;
+}
+
+
+@media screen and (min-width:769px) and (max-width: 1239px) {
+    .montain {
+        margin: 20px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .info {
+        flex-direction: column;
+    }
+
+    .infoleft {
+        width: 100%;
+    }
+
+
+    .inforight {
+        height: 33px;
+        margin: 20px 0;
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    .info-stars--list,
+    ul {
+        padding: 20px 0;
+
+        justify-content: left;
+        height: 32px;
+    }
+
+
 }
