--- a/src/styles/a_propos/CardApropos.css
+++ b/src/styles/a_propos/CardApropos.css
@@ -1,23 +1,21 @@
-
 .apropos {
-max-width: 1023px;
-display: flex;
-flex-direction: column;
-margin: 0 auto 33px auto
-
+    max-width: 1023px;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto 33px auto
 }
 
 .conteneur-apropos {
-position: relative;
-background-color: #ffff;
+    position: relative;
+    background-color: #ffff;
 }
 
 .active .conteneur-apropos {
     position: relative;
     margin-bottom: 33px;
-    }
+}
 
-.apropos-title{
+.apropos-title {
     background-color: rgba(255, 96, 96, 1);
     padding: 8px 18px;
     height: 47px;
@@ -34,12 +32,12 @@ background-color: #ffff;
     background-color: rgb(193, 79, 79);
 }
 
-.apropos-vector{
+.apropos-vector {
     width: 23px;
     height: 14px;
     position: absolute;
     right: 18px;
-    top:15px;
+    top: 15px;
     transform: rotateX(180deg);
     transition: all 0.5s
 }
@@ -49,12 +47,12 @@ background-color: #ffff;
     height: 14px;
     position: absolute;
     right: 18px;
-    top:15px;
+    top: 15px;
     transform: rotateX(0);
     transition: all 0.5s;
 }
 
-.apropos-text{
+.apropos-text {
     height: 0;
     opacity: 0;
     margin: 0;
@@ -82,31 +80,94 @@ background-color: #ffff;
     transition: all 0.3s ease-in;
 }
 
-.montain{
+.montain {
     position: relative;
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0, 0, 0, 0.3);
     max-width: 1240px;
     height: 223px;
     border-radius: 25px;
-    margin:  40px auto;
+    margin: 40px auto;
     margin-bottom: 33px;
 }
 
-.montain-img{
+.montain-img {
     width: 100%;
     height: 100%;
     border-radius: 25px;
     position: absolute;
     z-index: -1;
-    object-fit:cover;
-    
+    object-fit: cover;
+
 }
 
-@media screen and  (max-width: 1239px){
+.montain-img-mobile{
+    visibility: hidden;
+}
+
+@media screen and (min-width:769px) and (max-width: 1239px) {
+    .montain {
+        margin: 20px;
+    }
+
+    .apropos {
+        margin: 20px auto;
+        padding: 0 10px;
+    }
+}
+
+@media screen and (max-width:768px) {
     .montain{
-        margin: 20px;
+        margin: 0 0 20px 0;
     }
-    .apropos{
-        margin: 20px;
+    .main-apropos {
+        margin: 0 10px;
     }
+
+   
+    .apropos-title {
+        font-size: 13px;
+        height: 30px;
     }
+
+    .active .apropos-vector,
+    .apropos-vector {
+        width: 15px;
+        height: 9px;
+        top: 10px;
+    }
+
+
+    .active .apropos-text {
+        font-size: 12px;
+        font-weight: 400;
+        padding: 10px 10px 20px 10px;
+        line-height: 20px;
+        margin-bottom: 10px;
+    }
+
+    .apropos-text {
+        padding: 10px;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 20px;
+        margin-bottom: 0;
+
+    }
+
+
+}
+
+
+@media  screen and (max-width: 400px){
+    .montain-img {
+        visibility: hidden;
+    }
+
+    .montain-img-mobile{
+        visibility: visible;
+        width: 100%;
+        height: 100%;
+        border-radius:10px;
+        object-fit: cover;
+    }
+}
