--- a/src/styles/home/Card.css
+++ b/src/styles/home/Card.css
@@ -1,5 +1,5 @@
 .card {
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 1) 100%);
     position: relative;
     z-index: 1;
     width: 340px;
@@ -30,4 +30,25 @@
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
+}
+
+@media screen and  (max-width:1024px){
+    .card{
+        margin: 10px;
+    }
+}
+
+@media screen and  (max-width:768px){
+    .card{
+        min-width: 335px;
+        width: 100%;
+        height: 255px;
+        margin: 10px 0;
+    }
+    .card-cover{
+        width: 100%;
+    }
+    .card-title{
+        top: 190px;
+    }
 }
