--- a/src/styles/home/Cardlist.css
+++ b/src/styles/home/Cardlist.css
@@ -6,3 +6,14 @@
     background-color: #F7F7F7;
     border-radius: 25px;
 }
+
+@media screen and  (max-width:768px){
+    .cardlist{
+        margin-top: 20px;
+        background-color: white;
+    }
+
+    .cardlist-link{
+        width: 100%;
+    }
+}
