--- a/src/styles/home/Home.css
+++ b/src/styles/home/Home.css
@@ -8,3 +8,12 @@ max-width: 1240px
         margin: 20px;
     }
     }
+
+@media screen and (max-width: 768px){
+    .home{
+        margin: 10px
+    }
+    
+
+}
+    
