--- a/src/styles/layout/Header.css
+++ b/src/styles/layout/Header.css
@@ -13,8 +13,24 @@
     height: 68px;
 }
 
-@media screen and  (max-width: 1239px){
-.header{
-    margin: 20px;
+@media screen and (min-width:769px) and ( max-width: 1239px){
+    .header{
+        margin: 20px;
+    }
 }
-}
+    
+
+
+
+@media screen  and (max-width: 768px){
+    .header{
+        margin: 10px 20px;
+        display: flex;
+
+    }
+    .header-logo{
+        height: 47px;
+        width: 145px;
+        margin-right: 20px;
+    }
+    }
