--- a/src/styles/logement/Carrousel.css
+++ b/src/styles/logement/Carrousel.css
@@ -60,7 +60,7 @@
 
 .carrousel-img {
     position: relative;
-    width: 1240px;
+    width: 100%;
     object-fit: cover;
     border-radius: 25px;
     z-index: 1;
