--- a/src/styles/logement/Collaps.css
+++ b/src/styles/logement/Collaps.css
@@ -1,23 +1,32 @@
-
-
-.conteneur-collaps {
+.collaps {
+    width: 80%;
+}
+.conteneur-props{
     display: flex;
+    width: 100%;
+}
+.conteneur-collaps {
+    position: relative;
+    display: flex;
+    flex-direction: column;
     justify-content: space-between;
     margin-top: 24px;
+    z-index: 0;
 }
 
-.collaps {
-    width: 582px;
-display: flex;
-flex-direction: column;
+.conteneur-collaps--left{
+    max-width: 48%;
+}
 
-
+.conteneur-collaps--right{
+    width: 48%;
 }
 
 .active .conteneur-collaps {
     position: relative;
     margin-bottom: 33px;
     }
+
 
 .collaps-title{
     position: relative;
@@ -43,20 +52,14 @@ flex-direction: column;
 .collaps-vector{
     width: 23px;
     height: 14px;
-    right: 20px;
+    right: 10px;
+    top: 10px;
     position: absolute;
+    z-index: 2;
     transform: rotateX(180deg);
     transition: all 0.5s
 }
 
-.collaps-vector{
-    width: 23px;
-    height: 14px;
-    right: 20px;
-    position: absolute;
-    transform: rotateX(180deg);
-    transition: all 0.5s
-}
 
 .active .collaps-vector{
     width: 23px;
@@ -80,6 +83,7 @@ flex-direction: column;
     background-color: #F7F7F7;
     border-radius: 5px;
     line-height: 34px;
+    font-size: 18px;
     transition: all 0.3s ease-in;
 }
 
@@ -107,6 +111,12 @@ flex-direction: column;
     }
 
     @media screen and (max-width:768px) {
+
+        .conteneur-props{
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+        }
         .conteneur-collaps{
             flex-direction: column;
             width: 100%;
@@ -117,6 +127,15 @@ flex-direction: column;
             width: 100%;
             margin-top: 20px;
         }
+
+        .conteneur-collaps--left{
+            max-width: 100%;
+        }
+        
+        .conteneur-collaps--right{
+            width: 100%;
+        }
+        
 
         .collaps-title{
             font-size: 13px;
