--- a/src/styles/logement/Infos.css
+++ b/src/styles/logement/Infos.css
@@ -3,7 +3,7 @@
     display: flex;
     color: #FF6060;
     font-weight: 500;
-    margin-top: 30px
+    margin: 20px 0;
 }
 
 .infoleft {
@@ -82,7 +82,11 @@ ul {
     list-style: none;
 }
 
-
+@media screen and (max-width: 890px){
+    .star {
+width: 31px;
+}
+}
 
 @media screen and (max-width: 768px) {
     .info {
