--- a/src/styles/a_propos/Apropos.css
+++ b/src/styles/a_propos/Apropos.css
@@ -29,10 +29,12 @@
 }
 
 .apropos-info {
-    width: 100%;
+    width: 80%;
     display: flex;
     flex-direction: column;
-    margin: auto;
+    margin: 0 auto 20px auto;
+
+
 }
 
 
@@ -47,7 +49,13 @@
     .montain{
         margin: 0 0 20px 0;
     }
+    .main-apropos{
+        padding: 10px;
+    }
 
+    .apropos-info{
+        width: 100%;
+    }
 }
 
 
