--- a/src/styles/Collaps.css
+++ b/src/styles/Collaps.css
@@ -36,9 +36,10 @@
     z-index: 1;
 }
 
-.collaps-title:hover {
-    background-color: rgb(193, 79, 79);
+.collaps-vector:hover{
+    cursor: pointer;
 }
+    
 
 .collaps-vector{
     width: 40px;
