--- a/src/styles/Collaps.css
+++ b/src/styles/Collaps.css
@@ -9,6 +9,8 @@
     justify-content: space-between;
     margin-top: 24px;
     z-index: 0;
+    background-color: #F7F7F7;
+    border-radius: 10px;
 }
 
 
@@ -71,12 +73,9 @@
     flex-direction: column;
     height: 0;
     opacity: 0;
-    margin: 0;
-    visibility: hidden;
-    padding: 0px 18px 10px 18px;
+    padding:0 18px 0 18px;
     color: rgba(255, 96, 96, 1);
-    background-color: #F7F7F7;
-    border-radius: 5px;
+    border-radius: 10px;
     line-height: 34px;
     font-size: 18px;
     transition: all 0.3s ease-in;
@@ -86,9 +85,10 @@
     position: relative;
     top: -10px;
     height: auto;
+    padding:0 18px 0 18px;
+    margin-top: 20px;
     opacity: 1;
     visibility: visible;
-    padding: 36px 18px 53px 18px;
     color: rgba(255, 96, 96, 1);
     background-color: #F7F7F7;
     border-radius: 10px;
@@ -96,6 +96,18 @@
     line-height: 34px;
     transition: all 0.3s ease-in;
 }
+
+.active ul {
+    width: auto;
+    margin: 0;
+    padding: 0;
+}
+
+.conteneur-collaps---text{
+    margin-top: 20px;
+    visibility:hidden;
+}
+
 
 @media screen and (min-width:769px) and (max-width: 1239px) {
     .collaps {
@@ -110,6 +122,7 @@
         flex-direction: column;
         width: 100%;
         margin-top: 0;
+        margin-bottom: 10px;
 
     }
 
@@ -152,7 +165,7 @@
         font-size: 12px;
         line-height: 20px;
         padding: 20px 10px 5px 10px;
-        margin-bottom: 0;
+        margin-top: 10px;
 
     }
 }
