--- a/src/styles/a_propos/Apropos.css
+++ b/src/styles/a_propos/Apropos.css
@@ -1,12 +1,14 @@
 .main-apropos {
     max-width: 1240px;
     margin: auto;
+    padding:0 10px
+
 }
 
 .montain {
     position: relative;
     background-color: rgba(0, 0, 0, 0.3);
-    max-width: 1240px;
+    max-width: 100%;
     height: 223px;
     border-radius: 25px;
     margin: 40px auto;
@@ -36,13 +38,6 @@
 
 }
 
-
-@media screen and (min-width:769px) and (max-width: 1239px) {
-    .montain {
-        margin: 20px;
-    }
-
-}
 
 @media screen and (max-width:768px) {
     .montain {
