--- a/src/styles/home/Cardlist.css
+++ b/src/styles/home/Cardlist.css
@@ -5,6 +5,60 @@
     flex-wrap: wrap;
     background-color: #F7F7F7;
     border-radius: 25px;
+    width: 100%;
+}
+
+.card {
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 1) 100%);
+    position: relative;
+    z-index: 1;
+   width: 100%;
+    height: 340px;
+    border-radius: 10px;
+    margin: 20px 2px;
+    overflow: hidden;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.cardlist-link{
+    width: 30%;
+}
+
+.card-title {
+    position: absolute;
+    top: 268px;
+    left: 20px;
+    color: rgb(255, 255, 255);
+    font-weight: 500;
+    font-size: 18px;
+    max-width: 300px;
+    height: 52px;
+    z-index: 2;
+    Line-height: 25.67px
+}
+
+.card-cover {
+    position: absolute;
+    z-index: 0;
+    opacity: 0.7;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+
+
+@media screen and (max-width:991px)
+{
+    .cardlist-link{
+        width: 45%;
+    }
+    .card-title{
+        display: flex;
+        align-items: center;
+    }
 }
 
 @media screen and (max-width:768px) {
@@ -15,5 +69,20 @@
 
     .cardlist-link {
         width: 100%;
+    }
+
+    .card {
+        min-width: 335px;
+        width: 100%;
+        height: 255px;
+        margin: 10px 0;
+    }
+
+    .card-cover {
+        width: 100%;
+    }
+
+    .card-title {
+        top: 190px;
     }
 }
